grammar.js
  source_file: $ => repeat($._description),

  /* 22. Compiler directives */

  /* 22-1 `include */

  double_quoted_string: $ => seq(
    '"', token.immediate(prec(1, /[^\\"\n]+/)), '"'
  ),

  include_compiler_directive_standard: $ => seq(
    '<', token.immediate(prec(1, /[^\\>\n]+/)), '>'
  ),

  include_compiler_directive: $ => seq(
    alias('`include', $.include_directive),
    choice(
      $.double_quoted_string,
      $.include_compiler_directive_standard
    )
  ),

  /* 22-2 `define */

  macro_text: $ => /(\\(.|\r?\n)|[^\\\n])*/,

  text_macro_name: $ => seq(
    $.text_macro_identifier,
    optseq('(', $.list_of_formal_arguments, ')')
  ),

  text_macro_identifier: $ => $._identifier,

  /* 22-5 define */

  text_macro_definition: $ => seq(
    alias('`define', $.define_directive),
    $.text_macro_name,
    optional($.macro_text),
    '\n'
  ),

  /* 22-4 22-5 */

  id_directive: $ => seq(
    choice(
      alias('`ifdef', $.ifdef_directive_text),
      alias('`ifndef', $.ifndef_directive_text),
      alias('`elsif', $.elsif_directive_text),
      directive('undef') /* 22-5-2 */
        
    ),
    $.text_macro_identifier
  ),

  // ifdef_directive: $ => seq(
  //     alias("`ifdef", $.ifdef_directive_text),
  //     $.text_macro_identifier,
  //     //any valid verilog source
  //     optional(repeat($.elsif_directive)),
  //     optional($.else_directive),
  //     alias("`endif", $.endif_directive_text)
  // ), 

  // ifndef_directive: $ => seq(
  //     //TODO
  // ), 
    
  // elsif_directive: $ => seq(
  //     alias("`elsif", $.elsif_directive_text),
  //     $.text_macro_identifier,
  //     //any valid verilog source
  // ),

  // else_directive: $ => //any valid verilog source

  zero_directive: $ => choice(
    directive('resetall'), /* 22-3 */
    directive('undefineall'), /* 22-5-3 */
    directive('endif'),
    directive('else'),
    directive('nounconnected_drive'),
    directive('celldefine'), /* 22-10 */
    directive('endcelldefine'),
    directive('end_keywords') /* 22.14 */
  ),

  /* 22-7 timescale */

  timescale_compiler_directive: $ => seq(
    alias('`timescale', $.timescale_directive),
    $.time_literal, // time_unit,
    '/',
    $.time_literal, // time_precision
    '\n'
  ),

  /* 22-8 default_nettype */

  default_nettype_compiler_directive: $ => seq(
    alias('`default_nettype', $.default_nettype_directive),
    $.default_nettype_value,
    '\n'
  ),

  default_nettype_value: $ => choice('wire', 'tri', 'tri0', 'tri1', 'wand', 'triand', 'wor', 'trior', 'trireg', 'uwire', 'none'),

  /* 22-9 */

  line_compiler_directive: $ => seq(
    alias('`line', $.line_directive),
    $.unsigned_number,
    $.double_quoted_string,
    $.unsigned_number,
    '\n'
  ),

  /* 22.13 */
  /* `__FILE__ and `__LINE__ */

  /* 22.14 */
  text_macro_usage: $ => seq(
    '`',
    $.text_macro_identifier,
    optseq('(', $.list_of_actual_arguments, ')')
  ),

  list_of_actual_arguments: $ => sep1(',', $._actual_argument),

  _actual_argument: $ => $.expression,

  /* A.1.1 Library source text */

  // library_text: $ => repeat($.library_description),

  // library_description: $ => choice(
  //   $.library_declaration,
  //   $.include_statement,
  //   $.config_declaration,
  //   ';'
  // ),
  //
  // library_declaration: $ => seq(
  //   'library',
  //   $.library_identifier,
  //   sep1(',', $.file_path_spec),
  //   optseq('-incdir', sep1(',', $.file_path_spec)),
  //   ';'
  // ),
  //
  // include_statement: $ => seq('include', $.file_path_spec, ';'),

  /* A.1.2 SystemVerilog source text */

  _description: $ => choice(
    // $._directives,
    $.module_declaration,
    // $.udp_declaration,
    // $.interface_declaration,
    // $.program_declaration,
    // $.package_declaration,
    // seq(repeat($.attribute_instance), $._package_item),
    // seq(repeat($.attribute_instance), $.bind_directive)
    // $.config_declaration,
  ),

  // module_nonansi_header: $ =>
  //   { attribute_instance } module_keyword [ lifetime ] _module_identifier
  //     { package_import_declaration } [ parameter_port_list ] list_of_ports ';'
  //
  // module_ansi_header: $ =>
  //   { attribute_instance } module_keyword [ lifetime ] _module_identifier
  //     { package_import_declaration } [ parameter_port_list ] [ list_of_port_declarations ] ';'
  //
  // module_declaration: $ =>
  //   module_nonansi_header [ timeunits_declaration ] { module_item }
  //     'endmodule' [ ':' _module_identifier ]
  // | module_ansi_header [ timeunits_declaration ] { non_port_module_item }
  //     'endmodule' [ ':' _module_identifier ]
  // | { attribute_instance } module_keyword [ lifetime ] _module_identifier '(' '.*' ')' ';'
  //   [ timeunits_declaration ] { module_item } 'endmodule' [ ':' _module_identifier ]
  // | 'extern' module_nonansi_header
  // | 'extern' module_ansi_header

  module_header: $ => seq(
    // repeat($.attribute_instance),
    $.module_keyword,
    // optional($.lifetime),
    $._module_identifier
  ),

  module_nonansi_header: $ => seq(
    // repeat($.package_import_declaration),
    // optional($.parameter_port_list),
    $.list_of_ports
  ),

  module_declaration: $ => choice(
    seq(
      $.module_header,
      optional(choice(
        $.module_nonansi_header,
      //   $.module_ansi_header,
        // seq('(', '.*', ')')
      )),
      ';',
      // optional($.timeunits_declaration),
      repeat($._module_item),
      'endmodule', optseq(':', $._module_identifier)
    ),
    // seq('extern', $.module_header, choice(
    //   $.module_nonansi_header,
    //   $.module_ansi_header
    // ))
  ),

  module_keyword: $ => choice('module', 'macromodule'),

  list_of_ports: $ => seq(
    '(',
    // optional(sep1(',', seq(
    //   optional($.line_compiler_directive),
    //   $.port,
    //   optional($.line_compiler_directive)
    // ))),
    ')'
  ),

  _module_common_item: $ => choice(
    // $._module_or_generate_item_declaration,
    // $.interface_instantiation,
    // $.program_instantiation,
    // $._assertion_item,
    // $.bind_directive,
    $.continuous_assign,
    // $.net_alias,
    // $.initial_construct,
    // $.final_construct,
    // $.always_construct,
    // $.loop_generate_construct,
    // $._conditional_generate_construct,
    // $.elaboration_system_task
  ),

  _module_item: $ => choice(
    // seq($.port_declaration, ';'),
    $._non_port_module_item
  ),

  module_or_generate_item: $ => seq(
    // repeat($.attribute_instance),
    choice(
      // $.parameter_override,
      // $.gate_instantiation,
      // $.udp_instantiation,
      // $.module_instantiation,
      $._module_common_item
    )
  ),

  continuous_assign: $ => seq(
    'assign',
    choice(
      seq(
        // optional($.drive_strength),
        // optional($.delay3),
        $.list_of_net_assignments
      ),
      seq(
        // optional($.delay_control),
        // $.list_of_variable_assignments
      )
    ),
    ';'
  ),

  list_of_net_assignments: $ => sep1(',', $.net_assignment),

  net_assignment: $ => prec.left(PREC.ASSIGN,
    seq($.net_lvalue, '=', $.expression)
  ),

  // A.6.2 Procedural blocks and assignments

  _assignment_pattern_expression_type: $ => choice(
    $.ps_type_identifier,
    // $.ps_parameter_identifier,
    $.integer_atom_type,
    $.type_reference
  ),

  expression: $ => choice(
    $.primary,

    // prec.left(PREC.UNARY, seq(
    //   $.unary_operator, repeat($.attribute_instance), $.primary
    // )),
    // prec.left(PREC.UNARY, $.inc_or_dec_expression),
    // prec.left(PREC.PARENT, seq('(', $.operator_assignment, ')')),

    // exprOp($, PREC.ADD, choice('+', '-')),
    // exprOp($, PREC.MUL, choice('*', '/', '%')),
    // exprOp($, PREC.EQUAL, choice('==', '!=', '===', '!==', '==?', '!=?')),
    // exprOp($, PREC.LOGICAL_AND, '&&'),
    // exprOp($, PREC.LOGICAL_OR, '||'),
    // exprOp($, PREC.POW, '**'),
    // exprOp($, PREC.RELATIONAL, choice('<', '<=', '>', '>=')),
    // exprOp($, PREC.AND, '&'),
    // exprOp($, PREC.OR, '|'),
    // exprOp($, PREC.XOR, choice('^', '^~', '~^')),
    // exprOp($, PREC.SHIFT, choice('>>', '<<', '>>>', '<<<')),
    // exprOp($, PREC.IMPLICATION, choice('->', '<->')),

    // $.conditional_expression,
    // $.inside_expression,
    // $.tagged_union_expression
  ),

  primary: $ => choice(
    $.primary_literal,
    // seq(
    //   optional(choice($.class_qualifier, $.package_scope)),
    //   $.hierarchical_identifier,
    //   optional($.select1)
    // ),
    // $.empty_unpacked_array_concatenation,
    // seq($.concatenation, optseq('[', $.range_expression, ']')),
    // seq($.multiple_concatenation, optseq('[', $.range_expression, ']')),
    // $.function_subroutine_call,
    // $.let_expression,
    // seq('(', $.mintypmax_expression, ')'),
    // $.cast,
    // $.assignment_pattern_expression,
    // $.streaming_concatenation,
    // $.sequence_method_call,
    // 'this',
    // '$',
    // 'null'
  ),

  primary_literal: $ => choice(
    $._number,
    // $.time_literal,
    $.unbased_unsized_literal,
    // $.string_literal,
    // $.simple_text_macro_usage
  ),

  time_literal: $ => choice(
    seq($.unsigned_number, $.time_unit),
    seq($.fixed_point_number, $.time_unit)
  ),

  time_unit: $ => choice('s', 'ms', 'us', 'ns', 'ps', 'fs'),

  net_lvalue: $ => choice(
    seq(
      $.ps_or_hierarchical_net_identifier,
      // optional($.constant_select1)
    ),
    prec.left(PREC.CONCAT, seq('{', sep1(',', $.net_lvalue), '}')),
    seq(
      // optional($._assignment_pattern_expression_type),
      $.assignment_pattern_net_lvalue
    )
  ),

  _number: $ => choice($.integral_number, $.real_number),

  integral_number: $ => choice(
    $.decimal_number,
    $.octal_number,
    $.binary_number,
    $.hex_number
  ),

  // Structure of decimal_number, binary_number etc. limits use of token to allow use of $.simple_text_macro_usage, size must be tokenized with ' to avoid token conflicts
    
  decimal_number: $ => choice(
    $.unsigned_number,
    seq(
      choice(
        token(seq(
          /[1-9][0-9_]*/,
          /\s*/,
          /'[sS]?[dD]/)),
        seq(
          $.simple_text_macro_usage,
          /\s*/,
          /'[sS]?[dD]/)),
      /\s*/,
      choice(
        $._unsigned_number_or_high_imp,
        $.simple_text_macro_usage)),
    seq(
      /'[sS]?[dD]/,
      /\s*/,
      choice(
        $._unsigned_number_or_high_imp,
        $.simple_text_macro_usage))
  ),

  binary_number: $ => choice(
    seq(
      token(seq(
        /[1-9][0-9_]*/,
        /\s*/,
        /'[sS]?[bB]/)),
      /\s*/,
      /[01xXzZ?][01xXzZ?_]*/),
    seq(
      /'[sS]?[bB]/,
      /\s*/,
      /[01xXzZ?][01xXzZ?_]*/),
  ),
    
  octal_number: $ => choice(
    seq(
      token(seq(
        /[1-9][0-9_]*/,
        /\s*/,
        /'[sS]?[oO]/)),
        /\s*/,
      /[0-7xXzZ?][0-7xXzZ?_]*/),
    seq( 
      /'[sS]?[oO]/,
      /\s*/,
      /[0-7xXzZ?][0-7xXzZ?_]*/),
    ),

  hex_number: $ => choice(
    seq(
      token(seq(
        /[1-9][0-9_]*/,
        /\s*/,
        /'[sS]?[hH]/)),
      /\s*/,
      /[0-9a-fA-FxXzZ?][0-9a-fA-FxXzZ?_]*/),
    seq(
      /'[sS]?[hH]/,
      /\s*/,
      /[0-9a-fA-FxXzZ?][0-9a-fA-FxXzZ?_]*/),
  ),

  // NOTE: Embedded spaces are illegal.
  unsigned_number: $ => token(/[0-9][0-9_]*/),
    
  _unsigned_number_or_high_imp: $ => choice(
    alias($.unsigned_number, 'unsigned_number'),
    /[xXzZ?][_]*/),

  // The apostrophe ( ' ) in unbased_unsized_literal shall not be followed by white_space.
  unbased_unsized_literal: $ => choice('\'0', '\'1', /'[xXzZ]/),

  /* A.9 General */

  /* A.9.1 Attributes */

  comment: $ => token(choice(
    seq('//', /.*/),
    seq(
      '/*',
      /[^*]*\*+([^/*][^*]*\*+)*/,
      '/'
    )
  )),

  /* A.9.3 Identifiers */

  _identifier: $ => choice(
    $.simple_identifier,
    $.escaped_identifier
  ),

  _module_identifier: $ => $._identifier,
  simple_identifier: $ => /[a-zA-Z_][a-zA-Z0-9_$]*/,
