corpus/assign.txt
============================================
assign - constant decimal
============================================

module mod ();
  assign a = 5;
endmodule

----

(source_file (module_declaration
  (module_header (module_keyword) (simple_identifier))
  (module_nonansi_header (list_of_ports))
    (module_or_generate_item (continuous_assign (list_of_net_assignments (net_assignment
      (net_lvalue (simple_identifier))
      (expression (primary (primary_literal (integral_number (decimal_number (unsigned_number))))))
    ))))
))

============================================
assign - constant '0
============================================

module mod ();
  assign a = '0;
endmodule

----

(source_file (module_declaration
  (module_header (module_keyword) (simple_identifier))
  (module_nonansi_header (list_of_ports))
    (module_or_generate_item
      (continuous_assign (list_of_net_assignments (net_assignment
        (net_lvalue (simple_identifier))
        (expression (primary (primary_literal (unbased_unsized_literal))))
      )))
    )
))

============================================
assign - constants: bin oct dec hex
============================================

module mod ();

  assign quz = 16'habc;
  assign bar = 6'o42;
  assign foo = 7'b010_1000;
  assign baz = 12'd987654;

endmodule

----

(source_file (module_declaration
  (module_header (module_keyword) (simple_identifier))
  (module_nonansi_header (list_of_ports))
  (module_or_generate_item (continuous_assign (list_of_net_assignments (net_assignment
    (net_lvalue (simple_identifier))
    (expression (primary (primary_literal (integral_number (hex_number)))))))))
  (module_or_generate_item (continuous_assign (list_of_net_assignments (net_assignment
    (net_lvalue (simple_identifier))
    (expression (primary (primary_literal (integral_number (octal_number)))))))))
  (module_or_generate_item (continuous_assign (list_of_net_assignments (net_assignment
    (net_lvalue (simple_identifier))
    (expression (primary (primary_literal (integral_number (binary_number)))))))))
  (module_or_generate_item (continuous_assign (list_of_net_assignments (net_assignment
    (net_lvalue (simple_identifier))
    (expression (primary (primary_literal (integral_number (decimal_number)))))))))))
